fixed overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@
 
 body {
   background-color: #0281e0;
+  overflow: hidden;
 }
 
 .sidebar {
@@ -378,9 +379,8 @@ nav {
 
 .comments-container {
   position: relative;
-  perspective: 1000px; /* Enable 3D perspective for stacked effect */
-  width: 80%; /* Adjust width as needed */
-  margin: 50px auto; /* Center the container */
+  width: 80%;
+  perspective: 1000px; /* Enable 3D perspective for stacked effect*/
 }
 
 .comment {
@@ -388,12 +388,17 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 20px;
+  padding: 1.5rem 1rem;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   transition: transform 0.5s ease-in-out;
   transform-origin: left center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .comment:not(.active) {
@@ -416,21 +421,32 @@ nav {
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  gap: 0.8rem;
 }
 
 .commenter-details {
   display: flex;
-  flex-direction: column; /* Stack details vertically */
+  flex-direction: column;
 }
 
-.navigation {
-  margin-left: auto;
-}
-
-.navigation i {
+.prev,
+.next {
+  position: absolute;
+  font-size: 2rem;
   cursor: pointer;
-  margin-left: 10px;
-  font-size: 1.7rem;
+}
+
+.prev:hover,
+.next:hover {
+  opacity: 0.9;
+}
+
+.prev {
+  left: 9px;
+}
+
+.next {
+  right: 9px;
 }
 
 .fa-arrow-left::before {
